# c-basic-library

./: .gitignore  CMakeLists.txt  README.md  sources.cmake
doc/: develop_manual.md  develop_status.md  index.md
experiment/: fftw.c  high_precision_root.c  macro_template.c
include/: Basic.h  CBL.h  CBL_Array.h  CBL_Basic.h  CBL_DateTime.h  CBL_Dict.h  CBL_FloatMatrix.h  CBL_FloatVector.h  CBL_IntVector.h  CBL_Log.h  CBL_String.h  CBL_TypeArray.h  CBL_Vector.h  DateTime.h  Dict.h  Module_Basic.h  Module_Log.h  Module_Part_Macro_Loop_Basic.h  String.h  Template_Vector.h  Template_VectorN.h  Type_Complex.h  Type_ComplexMatrix.h  Type_ComplexVector.h  Type_DateTime.h  Type_Dict.h  Type_FloatMatrix.h  Type_FloatVector.h  Type_FloatVector3.h  Type_FloatVectorN.h  Type_IntVector.h  Type_IntVector3.h  Type_IntVectorN.h  Type_Part_math_basic.h  Type_String.h  config.h
note/: develop_data_safty_checklist.md  develop_manual.md  develop_status.md  log.md  manual.md  status.md
scripts/: download_external.sh  generate_from_template.jl  new_variable_macros.sh  new_variable_macros.txt  src_files_define.jl
src/: CBL.c  CBL_Array.c  CBL_Basic.c  CBL_DateTime.c  CBL_Dict.c  CBL_FloatMatrix.c  CBL_FloatVector.c  CBL_IntVector.c  CBL_Log.c  CBL_String.c  CBL_TypeArray.c  CBL_Vector.c  DateTime.c  Module_Basic.c  Module_Log.c  Type_Complex.c  Type_ComplexMatrix.c  Type_ComplexVector.c  Type_DateTime.c  Type_Dict.c  Type_FloatMatrix.c  Type_FloatVector.c  Type_IntVector.c  Type_Part_math_basic.c  Type_String.c  test.c
template/: Type_Dimsymbol.c  Type_Dimsymbol.h
test/: Array.c  CBL.c  Complex.c  ComplexMatrix.c  ComplexVector.c  DateTime.c  Dict.c  FloatMatrix.c  FloatVector.c  FloatVectorN.c  IntVector.c  IntVectorN.c  Log.c  String.c  TypeArray.c  Vector.c  test.sh  test_progress.md
trash/: FloatMatrix.c  Template_Vector.h  TypeArray.c  Type_FloatMatrix.c  Type_FloatMatrix.h  Type_FloatVector.c  Type_FloatVectorN.h  Type_IntVector.c  Type_IntVectorN.h
